[Update] Main Page: Language Settings. Change the design add and remove target language buttons.

--- a/src-ui/app/main_page/sidebar_section/language_settings/add_remove_target_language_buttons/AddRemoveTargetLanguageButtons.module.scss
+++ b/src-ui/app/main_page/sidebar_section/language_settings/add_remove_target_language_buttons/AddRemoveTargetLanguageButtons.module.scss
@@ -1,15 +1,15 @@
 .add_remove_target_language_container {
     width: 100%;
     display: flex;
+    justify-content: end;
     align-items: center;
 }
 
-.add_target_language_button, .remove_target_language_button {
-    width: 100%;
+.remove_target_language_button, .add_target_language_button {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0.6rem 0;
+    padding: 0.6rem 1rem;
     cursor: pointer;
     background-color: var(--dark_825_color);
     &:hover {
@@ -24,6 +24,14 @@
             color: var(--dark_700_color);
         }
     }
+}
+
+.remove_target_language_button {
+    border-radius: 0 0 0 0.4rem;
+
+}
+.add_target_language_button {
+    border-radius: 0 0 0.4rem 0;
 }
 
 .remove_svg, .add_svg {
