[Chore] Config Page: software version text. Adjust size a bit.

--- a/src-ui/app/config_page/ConfigPage.module.scss
+++ b/src-ui/app/config_page/ConfigPage.module.scss
@@ -29,5 +29,6 @@
     position: absolute;
     bottom: 0.8rem;
     left: 1.2rem;
-    font-size: 1.4rem;
+    font-size: 1.2rem;
+    color: var(--dark_400_color);
 }
