[Update] Main Page: Message MessageLogSettingsContainer: Add config icon to bottom of it.

--- a/src-ui/app/_index_css/variables.css
+++ b/src-ui/app/_index_css/variables.css
@@ -48,6 +48,8 @@
     --dark_975_color: #1a1b1d;
     --dark_1000_color: #151517;
 
+    --dark_825_color_cc: #434447cc;
+
 
     --title_bar_height: 2rem;
     --main_page_topbar_height: 4.8rem;
