[Update] Config Page: Change the background color modal and quick settings.

--- a/src-ui/app/_index_css/variables.css
+++ b/src-ui/app/_index_css/variables.css
@@ -49,6 +49,7 @@
     --dark_1000_color: #151517;
 
     --dark_825_color_cc: #434447cc;
+    --dark_550_color_22: #94959922;
 
 
     --title_bar_height: 2rem;
