--- a/src-ui/app/modal_controller/ModalController.module.scss
+++ b/src-ui/app/modal_controller/ModalController.module.scss
@@ -11,7 +11,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color:  (#ffffff22);
+    background-color: var(--dark_550_color_22);
     backdrop-filter: blur(0.2rem);
 }
 
@@ -21,7 +21,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     overflow-y: auto;
-    background-color: var(--dark_875_color);
+    background-color: var(--dark_900_color);
     width: 60%;
     height: 96%;
     padding: 2rem;
