--- a/src-ui/app/config_page/setting_section/setting_box/_components/radio_button/RadioButton.module.scss
+++ b/src-ui/app/config_page/setting_section/setting_box/_components/radio_button/RadioButton.module.scss
@@ -6,6 +6,7 @@
     position: relative;
     flex-shrink: 0;
     flex-wrap: wrap;
+    max-width: 70%;
     &.column {
         flex-direction: column;
     }
