--- a/src-ui/app/main_page/sidebar_section/language_settings/translator_selector_open_button/translator_selector/TranslatorSelector.module.scss
+++ b/src-ui/app/main_page/sidebar_section/language_settings/translator_selector_open_button/translator_selector/TranslatorSelector.module.scss
@@ -3,7 +3,6 @@
     bottom: 100%;
     width: 100%;
     height: 26rem;
-    padding: 1rem;
     background-color:  (#000000dd);
     // background-color:  (var(--dark_875_color) + 80);
     backdrop-filter: blur(0.1rem);
@@ -12,7 +11,16 @@
     align-items: center;
 }
 
+.relative_container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
 .wrapper {
+    // padding: 1rem;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -60,4 +68,24 @@ $box_size: 6.8rem;
 
 .translator_name {
     font-size: 1.4rem;
+}
+
+.is_selected_same_language_wrapper {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    background-color:  (#22222233);
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    pointer-events: none;
+    padding: 4rem 1rem;
+}
+
+.is_selected_same_language_text {
+    font-size: 1.4rem;
+    text-align: center;
+    text-wrap: balance;
+    color: var(--dark_basic_text_color);
 }
