--- a/src-ui/app/config_page/setting_section/setting_box/vr/Vr.module.scss
+++ b/src-ui/app/config_page/setting_section/setting_box/vr/Vr.module.scss
@@ -256,18 +256,20 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     width: 100%;
     position: relative;
 }
 .other_controls_slider {
-    margin-left: 18rem;
+    // margin-left: 18rem;
+    // width: 60%;
 }
 
 .other_controls_slider_label {
-    position: absolute;
+    // position: absolute;
     font-size: 1.6rem;
-    width: 100%;
+    flex-shrink: 0;
+    width: 30%;
 }
 
 .common_container {
