--- a/src-ui/app/splash_component/SplashComponent.module.scss
+++ b/src-ui/app/splash_component/SplashComponent.module.scss
@@ -1,8 +1,26 @@
-.progress_container {
-    position: relative;
-}
-.progress_label {
+.announcements_button {
     position: absolute;
-    font-size: 1rem;
-    color: var(--dark_basic_text_color);
+    top: 16px;
+    left: 20px;
+    border: 1px solid var(--dark_600_color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 6px;
+    padding: 6px 8px;
+    border-radius: 4px;
+    &:hover {
+        background-color: var(--dark_750_color);
+    }
+    &:active {
+        background-color: var(--dark_850_color);
+    }
+    transition: all 0.1s ease;
+}
+
+.announcements_label {
+    font-size: 12px;
+}
+.announcements_link_svg {
+    width: 20px;
 }
