[bugfix] Main Page: Message Logs: Fix text-align where sent message.

--- a/src-ui/app/main_page/main_section/message_container/log_box/message_container/MessageContainer.module.scss
+++ b/src-ui/app/main_page/main_section/message_container/log_box/message_container/MessageContainer.module.scss
@@ -73,6 +73,7 @@
     flex-direction: column;
     &.sent_message {
         align-items: end;
+        text-align: end;
     }
     &.received_message {
         align-items: start;
