[Update] root.css: Prevent user drag and select images.

--- a/src-ui/app/_index_css/root.css
+++ b/src-ui/app/_index_css/root.css
@@ -43,3 +43,8 @@ svg {
 p {
     white-space: pre-wrap;
 }
+img {
+    user-select: none;
+    -webkit-user-drag: none;
+    -webkit-user-select: none;
+}
