--- a/src-ui/app/splash_component/SplashComponent.module.scss
+++ b/src-ui/app/splash_component/SplashComponent.module.scss
@@ -7,22 +7,24 @@
 
 .announcements_button_wrapper {
     position: absolute;
-    top: 16px;
-    left: 20px;
+    top: 10px;
+    left: 10px;
     opacity: 0;
-    transition: opacity 0.3s ease;
+    transition: opacity 0.3s ease, border 0.3s ease;
+    padding: 4px 8px;
+    border-radius: 4px;
     &.is_shown {
         opacity: 1;
     }
-}
-.announcements_button {
-    border: 1px solid var(--dark_700_color);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 6px;
-    padding: 4px 8px;
-    border-radius: 4px;
+    &.is_labels_active {
+        & .announcements_label {
+            display: block;
+            animation: appear .3s ease;
+        }
+        & .announcements_link_svg {
+            color: var(--dark_basic_text_color);
+        }
+    }
     &:hover {
         background-color: var(--dark_825_color);
         & .announcements_label {
@@ -35,20 +37,33 @@
     &:active {
         background-color: var(--dark_850_color);
     }
+}
+
+@keyframes appear {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+.announcements_button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
     transition: all 0.1s ease;
 }
 
 .announcements_label {
     font-size: 12px;
     color: var(--dark_400_color);
-    opacity: 0;
-    transition: opacity 0.3s ease;
-    &.is_labels_active {
-        opacity: 1;
-    }
+    display: none;
+    transition: all 0.3s ease;
 }
 .announcements_link_svg {
     width: 20px;
+    color: var(--dark_600_color);
 }
 
 
