--- a/src-ui/app/main_page/main_section/message_container/log_box/message_container/message_sub_menu_container/MessageSubMenuContainer.module.scss
+++ b/src-ui/app/main_page/main_section/message_container/log_box/message_container/message_sub_menu_container/MessageSubMenuContainer.module.scss
@@ -30,7 +30,7 @@
 
 .tooltip_title {
     font-size: 1.2rem;
-    color: var(--dark_basic_text_color);
+    color: var(--dark_200_color);
 }
 
 .hold_progress_bar {
