--- a/src-ui/app/main_page/sidebar_section/language_settings/language_swap_button/LanguageSwapButton.module.scss
+++ b/src-ui/app/main_page/sidebar_section/language_settings/language_swap_button/LanguageSwapButton.module.scss
@@ -31,6 +31,6 @@
     font-size: 1.2rem;
     color: var(--dark_500_color);
     &.is_hovered {
-        color: var(--dark_basic_text_color);
+        color: var(--dark_200_color);
     }
 }
