--- a/src-ui/app/config_page/setting_section/setting_box/_components/word_filter/WordFilter.module.scss
+++ b/src-ui/app/config_page/setting_section/setting_box/_components/word_filter/WordFilter.module.scss
@@ -32,7 +32,6 @@
 .item_text {
     font-size: 1.4rem;
     font-weight: 300;
-    color: var(--dark_basic_text_color);
     &.is_redoable {
         text-decoration: line-through;
     }
@@ -56,7 +55,7 @@
 
 .delete_svg {
     width: 2.4rem;
-    color: #bb4448;
+    color: var(--error_bc_color);
 }
 
 .redo_svg {
@@ -77,7 +76,6 @@
 .add_button {
     padding: 0.8rem 1.2rem;
     background-color: var(--primary_600_color);
-    color: var(--dark_basic_text_color);
     font-size: 1.4rem;
     border-radius: 0.4rem;
     text-align: center;
