--- a/src-ui/app/main_page/sidebar_section/language_settings/translator_selector_open_button/TranslatorSelectorOpenButton.module.scss
+++ b/src-ui/app/main_page/sidebar_section/language_settings/translator_selector_open_button/TranslatorSelectorOpenButton.module.scss
@@ -24,7 +24,6 @@
 
 .label {
     font-size: 1.2rem;
-    color: var(--dark_basic_text_color);
     white-space: nowrap;
 }
 
@@ -32,5 +31,5 @@
     margin-left: 0.2rem;
     padding-bottom: 0.2rem;
     width: 1.8rem;
-    color: #cb944f;
+    color: var(--waring_color);
 }
