--- a/src-ui/app/snackbar_controller/SnackbarController.module.scss
+++ b/src-ui/app/snackbar_controller/SnackbarController.module.scss
@@ -4,10 +4,10 @@
     padding: 2rem;
     color: #fff;
     &.is_success {
-        background-color: #368777;
+        background-color: var(--success_bc_color);
     }
     &.is_error {
-        background-color: #bb4448;
+        background-color: var(--error_bc_color);
     }
 }
 
