--- a/src-ui/app/config_page/setting_section/setting_box/device/Device.module.scss
+++ b/src-ui/app/config_page/setting_section/setting_box/device/Device.module.scss
@@ -75,6 +75,8 @@
     display: flex;
     flex-direction: column;
     gap: 1.2rem;
+    justify-content: center;
+    align-items: center;
 }
 
 .device_dropdown_wrapper {
@@ -96,6 +98,7 @@
 
 .device_secondary_label {
     padding-left: 0.2rem;
+    padding-right: 0.4rem;
     font-size: 1.4rem;
     color: var(--dark_500_color);
     white-space: nowrap;
