--- a/src-ui/app/main_page/main_section/message_container/log_box/message_container/MessageContainer.module.scss
+++ b/src-ui/app/main_page/main_section/message_container/log_box/message_container/MessageContainer.module.scss
@@ -71,6 +71,7 @@
 .message_box {
     display: flex;
     flex-direction: column;
+    width: 100%;
     &.sent_message {
         align-items: end;
         text-align: end;
@@ -83,6 +84,8 @@
 .message_main {
     user-select: text;
     font-size: 1.4em;
+    overflow-wrap: break-word;
+    max-width: 100%;
 }
 
 .message_second {
