--- a/src-ui/app/main_page/main_section/message_container/message_input_box/MessageInputBox.module.scss
+++ b/src-ui/app/main_page/main_section/message_container/message_input_box/MessageInputBox.module.scss
@@ -1,13 +1,12 @@
 .container {
     height: 100%;
     display: flex;
-    flex-direction: row;
+    gap: 1rem;
 }
 
 .message_box_wrapper {
     width: 100%;
     height: 100%;
-    margin-right: 1rem;
     padding: 0.8rem;
     background-color: var(--dark_875_color);
     border: 0.1rem solid var(--dark_750_color);
