[Update] Main Page: Sidebar: Add scroll bar to compact mode.

--- a/src-ui/app/main_page/sidebar_section/SidebarSection.module.scss
+++ b/src-ui/app/main_page/sidebar_section/SidebarSection.module.scss
@@ -8,8 +8,8 @@
     &.is_compact_mode {
         min-width: auto;
         .scroll_container {
-            overflow-y: hidden;
-            width: auto;
+            // overflow-y: hidden;
+            // width: auto;
         }
     }
 }
