--- a/src-ui/app/main_page/sidebar_section/main_function_switch/MainFunctionSwitch.module.scss
+++ b/src-ui/app/main_page/sidebar_section/main_function_switch/MainFunctionSwitch.module.scss
@@ -22,6 +22,7 @@
     }
     &.is_compact_mode {
         padding: 1.5rem;
+        justify-content: center;
     }
     &.is_pending {
         pointer-events: none;
