[Update] Config Page: About VRCT: Apply a responsive design.

--- a/src-ui/app/config_page/setting_section/setting_box/about_vrct/poster_showcase_contents/PosterShowcaseContents.module.scss
+++ b/src-ui/app/config_page/setting_section/setting_box/about_vrct/poster_showcase_contents/PosterShowcaseContents.module.scss
@@ -1,6 +1,7 @@
 .container {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: start;
     gap: 2rem;
+    flex-wrap: wrap;
 }
