--- a/src-ui/app/config_page/setting_section/setting_box/supporters/supporters_container/SupportersContainer.module.scss
+++ b/src-ui/app/config_page/setting_section/setting_box/supporters/supporters_container/SupportersContainer.module.scss
@@ -12,12 +12,19 @@
     align-items: center;
     flex-direction: column;
     gap: 0.2rem;
+    width: 100%;
 }
 .vrct_supporters_title {
     height: 4.2rem;
 }
 .calc_period {
     height: 1.6rem;
+}
+.last_updated_local_date {
+    font-size: 1.2rem;
+    color: var(--dark_600_color);
+    width: 100%;
+    text-align: end;
 }
 
 .vrct_supporters_desc_end {
