--- a/src-ui/app/config_page/setting_section/setting_box/plugins/Plugins.module.scss
+++ b/src-ui/app/config_page/setting_section/setting_box/plugins/Plugins.module.scss
@@ -3,3 +3,33 @@
     gap: 6.4rem;
     flex-direction: column;
 }
+
+.plugins_list_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.plugin_wrapper {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 2rem;
+    &:not(:last-child) {
+        border-bottom: 0.1rem solid var(--dark_750_color);
+    }
+}
+
+.title {
+    font-size: 1.6rem;
+}
+
+.plugin_id {
+    font-size: 1rem;
+}
+
+.download_button {
+    background-color: var(--dark_750_color);
+    padding: 0.4rem 0.6rem;
+    font-size: 1.2rem;
+}
