[Update/TMP] Save plugin status that if enabled or not(on store.js, yet). Handle download.

--- a/src-ui/app/config_page/setting_section/setting_box/plugins/Plugins.module.scss
+++ b/src-ui/app/config_page/setting_section/setting_box/plugins/Plugins.module.scss
@@ -20,6 +20,13 @@
     }
 }
 
+.plugin_info_wrapper {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .title {
     font-size: 1.6rem;
 }
