--- a/src-ui/app/config_page/setting_section/setting_box/_components/_atoms/_download_button/_DownloadButton.module.scss
+++ b/src-ui/app/config_page/setting_section/setting_box/_components/_atoms/_download_button/_DownloadButton.module.scss
@@ -13,6 +13,7 @@
     background-color: var(--dark_800_color);
     padding: 0.8rem;
     flex-shrink: 0;
+    border-radius: 0.2rem;
     &:hover {
         background-color: var(--dark_750_color);
     }
